# Aurora

./: .gitignore  Cargo.toml  Dioxus.toml  README.md  deploy.sh  index.html  vercel-build.sh  vercel.json  vercel.output.json
.github/workflows/: android-apk.yml  web-deploy.yml
assets/: main.css  map.js
src/: app.rs  main.rs  state.rs  weather.rs
